corrected alignment add css corrected css modified few files

--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
 }
 
 .main-area-partitioning {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  overflow: hidden;
   background-color: var(--primary-background);
 }
 
@@ -50,9 +50,9 @@
 .window-toggle-btn {
   position: absolute;
   z-index: 100;
-  right: 5px;         
-  top: 10px;           
-  padding: 6px;        
+  right: 10px;         
+  bottom: 10px;           
+  padding: 10px;        
   background: transparent;
   border: none;
   border-radius: 4px;
